# databases-casbin-adapter

./: .gitignore  Makefile  README.md  pyproject.toml  requirement.txt  requirements-test.txt  requirements.txt  setup.py
casbin_databases_adapter/: __init__.py  adapter.py  utils.py
tests/: conftest.py  test_adapter.py
